--- a/examples/column-order.html
+++ b/examples/column-order.html
@@ -17,48 +17,56 @@
         
         <div class="row column-full-height">
             <div class="column small-4 small-order-2-and-after">
-                <h3>column small-4 small-order-2-and-after</h3>
-                <p>
-                    Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
-                    theatralis ludos atque circenses ambitioso editos apparatu diem 
-                    sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
-                    insolentiae pondera gravius librans, siquid dubium deferebatur aut 
-                    falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
-                    Gerontium Magnentianae comitem partis exulari maerore multavit.
-                </p>
+                <div class="block-padding">
+                    <h3>small-4 small-order-2-and-after</h3>
+                    <p>
+                        Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
+                        theatralis ludos atque circenses ambitioso editos apparatu diem 
+                        sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
+                        insolentiae pondera gravius librans, siquid dubium deferebatur aut 
+                        falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
+                        Gerontium Magnentianae comitem partis exulari maerore multavit.
+                    </p>
+                </div>
             </div>
             <div class="column small-4">
-                <h3>column small-4</h3>
-                <p>
-                    Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
-                    theatralis ludos atque circenses ambitioso editos apparatu diem 
-                    sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
-                    insolentiae pondera gravius librans, siquid dubium deferebatur aut 
-                    falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
-                    Gerontium Magnentianae comitem partis exulari maerore multavit.
-                </p>
+                <div class="block-padding">
+                    <h3>small-4</h3>
+                    <p>
+                        Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
+                        theatralis ludos atque circenses ambitioso editos apparatu diem 
+                        sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
+                        insolentiae pondera gravius librans, siquid dubium deferebatur aut 
+                        falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
+                        Gerontium Magnentianae comitem partis exulari maerore multavit.
+                    </p>
+                </div>
             </div>
             <div class="column small-4 small-order-3">
-                <h3>column small-4 small-order-3</h3>
-                <p>
-                    Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
-                    theatralis ludos atque circenses ambitioso editos apparatu diem 
-                    sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
-                    insolentiae pondera gravius librans, siquid dubium deferebatur aut 
-                    falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
-                    Gerontium Magnentianae comitem partis exulari maerore multavit.
-                </p>
+                <div class="block-padding">
+                    <h3>small-4 small-order-3</h3>
+                    <p>
+                        Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
+                        theatralis ludos atque circenses ambitioso editos apparatu diem 
+                        sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
+                        insolentiae pondera gravius librans, siquid dubium deferebatur aut 
+                        falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
+                        Gerontium Magnentianae comitem partis exulari maerore multavit.
+                    </p>
+                </div>
             </div>
             <div class="column small-4 small-order-1">
-                <h3>column small-4 small-order-1</h3>
-                <p>
-                    Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
-                    theatralis ludos atque circenses ambitioso editos apparatu diem 
-                    sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
-                    insolentiae pondera gravius librans, siquid dubium deferebatur aut 
-                    falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
-                    Gerontium Magnentianae comitem partis exulari maerore multavit.
-                </p>
+                <div class="block-padding">
+                    <h3>small-4 small-order-1</h3>
+                    <p>
+                        Dum haec in oriente aguntur, Arelate hiemem agens Constantius post 
+                        theatralis ludos atque circenses ambitioso editos apparatu diem 
+                        sextum idus Octobres, qui imperii eius annum tricensimum terminabat, 
+                        insolentiae pondera gravius librans, siquid dubium deferebatur aut 
+                        falsum, pro liquido accipiens et conperto, inter alia excarnificatum 
+                        Gerontium Magnentianae comitem partis exulari maerore multavit.
+                    </p>
+                </div>
             </div>
         </div>
         
