Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <h3>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">link</span> <span class="pl-e">rel</span>=<span class="pl-s"><span class="pl-pds">"</span>stylesheet<span class="pl-pds">"</span></span> <span class="pl-e">href</span>=<span class="pl-s"><span class="pl-pds">"</span>https://rawgit.com/w-jerome/flexbox-grid/master/src/flexbox-grid.min.css<span class="pl-pds">"</span></span>/&gt;</pre></div>
+<p><code>html
+&lt;link rel="stylesheet" href="https://rawgit.com/w-jerome/flexbox-grid/master/src/flexbox-grid.min.css"/&gt;
+</code></p>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
