Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,11 +30,24 @@
 <div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">link</span> <span class="pl-e">rel</span>=<span class="pl-s"><span class="pl-pds">"</span>stylesheet<span class="pl-pds">"</span></span> <span class="pl-e">href</span>=<span class="pl-s"><span class="pl-pds">"</span>https://rawgit.com/w-jerome/flexbox-grid/master/src/flexbox-grid.min.css<span class="pl-pds">"</span></span>&gt;</pre></div>
 
 <h3>
-<a id="premier-pas" class="anchor" href="#premier-pas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premier pas</h3>
+<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
 <p>Flexbox Grid utilise les classes pour se structurer. Les classes sont nommé sans abréviations, ce qui permet pour un nouvel utilisateur de comprendre plus facilement l'utilisation de l'outil.</p>
 
-<p>Il utilise toujours le plus petit écran comme point de départ, par exemple si une colonne n'a que la classe <code>small-6</code> il va l'appliquer sur tous les écrans, cela évite d'écrire <code>small-6 medium-6 large-6 xlarge-6 xxlarge-6</code></p>
+<p>Il utilise toujours le plus petit écran renseigné comme point de départ, par exemple si une colonne n'a que la classe <code>small-6</code> il va l'appliquer sur tous les écrans, cela évite d'écrire <code>small-6 medium-6 large-6 xlarge-6 xxlarge-6</code></p>
+
+<p>Les point de rupture (breakpoints) sont ceux utilisé du Framework Foundation :</p>
+
+<blockquote>
+<p>small   : all screen
+medium  : min-width 641px
+large   : min-width 1025px
+xlarge  : min-width 1441px
+xxlarge : min-width 1921px</p>
+</blockquote>
+
+<h3>
+<a id="premier-pas" class="anchor" href="#premier-pas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premier pas</h3>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
