Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
 
 <p>Les point de rupture (breakpoints) sont ceux utilisé du Framework Foundation :</p>
 
-<blockquote>
-<p>small   : all screen
+<pre><code>small   : all screen
 medium  : min-width 641px
 large   : min-width 1025px
 xlarge  : min-width 1441px
-xxlarge : min-width 1921px</p>
-</blockquote>
+xxlarge : min-width 1921px
+</code></pre>
 
 <h3>
 <a id="premier-pas" class="anchor" href="#premier-pas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premier pas</h3>
