Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Il utilise toujours le plus petit écran renseigné comme point de départ, par exemple si une colonne n'a que la classe <code>small-6</code> il va l'appliquer sur tous les écrans, cela évite d'écrire <code>small-6 medium-6 large-6 xlarge-6 xxlarge-6</code></p>
 
-<p>Les point de rupture (breakpoints) sont ceux utilisé du Framework Foundation :</p>
+<p>Les point de rupture (breakpoints) sont ceux utilisé par Foundation :</p>
 
 <pre><code>small   : all screen
 medium  : min-width 641px
