Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Il utilise toujours le plus petit écran renseigné comme point de départ, par exemple si une colonne n'a que la classe <code>small-6</code> il va l'appliquer sur tous les écrans, cela évite d'écrire <code>small-6 medium-6 large-6 xlarge-6 xxlarge-6</code></p>
 
-<p>Les point de rupture (breakpoints) sont ceux utilisé par Foundation :</p>
+<p>Les points de rupture (breakpoints) sont ceux utilisé par Foundation :</p>
 
 <pre><code>small   : all screen
 medium  : min-width 641px
@@ -47,6 +47,23 @@ xxlarge : min-width 1921px
 
 <h3>
 <a id="premier-pas" class="anchor" href="#premier-pas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premier pas</h3>
+
+<p>Pour le système de grille est similaire aux autres frameworks</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>row<span class="pl-pds">"</span></span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3<span class="pl-pds">"</span></span>&gt;
+        small-3
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3<span class="pl-pds">"</span></span>&gt;
+        small-3
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3<span class="pl-pds">"</span></span>&gt;
+        small-3
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3<span class="pl-pds">"</span></span>&gt;
+        small-3
+    &lt;/<span class="pl-ent">div</span>&gt;
+&lt;/<span class="pl-ent">div</span>&gt;</pre></div>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
