Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ xlarge  : min-width 1441px
 xxlarge : min-width 1921px
 </code></pre>
 
+<hr>
+
 <h2>
 <a id="premier-pas" class="anchor" href="#premier-pas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premier pas</h2>
 
@@ -91,6 +93,28 @@ xxlarge : min-width 1921px
         small-3 gutter
     &lt;/<span class="pl-ent">div</span>&gt;
 &lt;/<span class="pl-ent">div</span>&gt;</pre></div>
+
+<h4>
+<a id="inverser-les-colonnes" class="anchor" href="#inverser-les-colonnes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inverser les colonnes</h4>
+
+<p>Par défaut les colonnes sont alignés de gauche à droite, vous pouvez inverser l'ordre avec la propriété <code>row-reverse</code> :</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>row row-reverse<span class="pl-pds">"</span></span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3<span class="pl-pds">"</span></span>&gt;
+        Colonne 1
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3 no-gutter<span class="pl-pds">"</span></span>&gt;
+        Colonne 2
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3 gutter<span class="pl-pds">"</span></span>&gt;
+        Colonne 3
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-3 gutter<span class="pl-pds">"</span></span>&gt;
+        Colonne 4
+    &lt;/<span class="pl-ent">div</span>&gt;
+&lt;/<span class="pl-ent">div</span>&gt;</pre></div>
+
+<hr>
 
 <h3>
 <a id="alignement-horizontal" class="anchor" href="#alignement-horizontal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Alignement horizontal</h3>
