Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -114,6 +114,26 @@ xxlarge : min-width 1921px
     &lt;/<span class="pl-ent">div</span>&gt;
 &lt;/<span class="pl-ent">div</span>&gt;</pre></div>
 
+<h4>
+<a id="orientation--paysage-landscape" class="anchor" href="#orientation--paysage-landscape" aria-hidden="true"><span class="octicon octicon-link"></span></a>Orientation : paysage (landscape)</h4>
+
+<p>Pour les écrans de petite taille (small et medium) il peut arriver que l'on veut des colonnes de taille différente en portrait ou en paysage, flexbox-grid implémente cette fonctionnalité avec les classes <code>*-landscape-*</code> :</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>row<span class="pl-pds">"</span></span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-12 small-landscape-6<span class="pl-pds">"</span></span>&gt;
+        small-12 small-landscape-6
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-12 small-landscape-6<span class="pl-pds">"</span></span>&gt;
+        small-12 small-landscape-6
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-12 small-landscape-6<span class="pl-pds">"</span></span>&gt;
+        small-12 small-landscape-6
+    &lt;/<span class="pl-ent">div</span>&gt;
+    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>column small-12 small-landscape-6<span class="pl-pds">"</span></span>&gt;
+        small-12 small-landscape-6
+    &lt;/<span class="pl-ent">div</span>&gt;
+&lt;/<span class="pl-ent">div</span>&gt;</pre></div>
+
 <hr>
 
 <h3>
