Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ xxlarge : min-width 1921px
 <h2>
 <a id="premier-pas" class="anchor" href="#premier-pas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Premier pas</h2>
 
-<p>Pour le système de grille est similaire aux autres frameworks</p>
+<p>Le système de grille est similaire aux autres frameworks, nous utilisons un conteneur avec la classe <code>row</code> et des colonnes avec la classe <code>column</code> (ou <code>columns</code>). Pour définir la taille des colonnes flexbox-grid utilise le principe des colonnes divisé en 12, nous leurs attribuerons des classes définissants la taille de l'écran voulu suivi de la taille de la colonne : <code>small-12 medium-6 large-3</code>.</p>
 
 <h3>
 <a id="basique" class="anchor" href="#basique" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basique</h3>
